--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -47,3 +47,8 @@ android.enableJetifier=true
 
 kotlin.compiler.jvmTarget=11
 kotlin.jvm.target.validation.mode=warning
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=android
+MYAPP_UPLOAD_KEY_PASSWORD=android
